[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.23"
visioncortex = "0.8.8"
wasm-bindgen = "0.2"

js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "ImageData",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"
