[package]
name = "tracer"
version = "0.1.0"
description = "WASM module for image tracing and vectorization"
repository = "https://github.com/scott/realness"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
image = "0.23"
visioncortex = "0.8.8"
wasm-bindgen = "0.2"

js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "ImageData",
    "Window"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
